force-app/main/default/objects/ProjDash_ProjectLead__c/ProjDash_ProjectLead__c.object-meta.xml
<CustomObject>
    <description>ProjDash - This custom object has a loookup relationship to the Project object. It stores other Project Leads for a Project similar to contact roles</description>
    <label>Project Lead</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Contact Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>