force-app/main/default/objects/ProjDash_ProjectLead__c/fields/Lead_s__c.field-meta.xml
<CustomField>
    <fullName>Lead_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead(s)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Other_Project_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>