force-app/main/default/objects/ProjDash_ProjectLead__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>ProjDash_Project__c</referenceTo>
    <relationshipName>Other_Project_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>